assets/scss/pages/_course-list.scss
// Course search bar.
.masteriyo-search {
	width: 100%;
	position: relative;
	margin-top: $spacing_64px;
	margin-bottom: $spacing_64px;

	.search-field {
		background: var(--masteriyo-color-white);
		box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.03);
		border-radius: $border_radius_8;
		height: 70px;
		width: 100%;
		font-weight: 400;
		text-decoration: inherit;
		border: 1px solid var(--masteriyo-color-text-light-a20);
		padding-left: $spacing_60px;

		&:hover,
		&:focus,
		&:active {
			background: var(--masteriyo-color-white);
			border: 1px solid var(--masteriyo-color-btn-blue-hover);
			transition: 0.5s ease;
			@include masteriyo-shadow-2;
		}
	}

	button {
		position: absolute;
		right: 0px;
		top: 0px;
		background-color: var(--masteriyo-color-primary);
		height: 70px;
		padding-right: $spacing_40px;
		padding-left: $spacing_40px;
		letter-spacing: 0.1em;
		text-transform: uppercase;
		font-weight: bold;

		&:hover {
			background-color: var(--masteriyo-color-btn-blue-hover);
		}
	}
}

.masteriyo-course-search {
	position: relative;

	button {
		border-top-right-radius: $border_radius_8;
		border-bottom-right-radius: $border_radius_8;
	}

	&__icon {
		position: absolute;
		left: 24px;
		top: 65%;
		transform: translate(0, -65%);
		z-index: 1;

		svg {
			fill: var(--masteriyo-color-placeholder);
		}
	}
}

//Course card list.
.masteriyo-course {
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	justify-content: flex-start;
	margin-left: -#{$spacing_10px};
	margin-right: -#{$spacing_10px};
	margin-top: -#{$spacing_15px};

	&--card {
		width: 100%;
		flex-basis: auto;
		align-self: baseline;
		@include masteriyo-shadow-2;
		border-radius: $border_radius_8;

		&:hover,
		&:focus {
			box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
			transition: 0.5s ease;
		}

		.masteriyo-rt {
			justify-content: space-between;
		}
	}

	&--img-wrap {
		position: relative;

		a {
			display: block;
		}

		img {
			width: 100%;
			border-top-left-radius: $border_radius_8;
			border-top-right-radius: $border_radius_8;
		}

		.difficulty-badge {
			position: absolute;
			left: 24px;
			top: 24px;
			z-index: 2;
		}
	}

	&--price-tag {
		position: absolute;
		top: 0;
		right: 0;
		background: var(--masteriyo-color-primary);
		border-radius: 0 0 0 $border_radius_8;
		padding: $spacing_8px $spacing_16px;
		color: var(--masteriyo-color-white);
		font-weight: 700;
		fill: var(--masteriyo-color-white);
	}
}

.masteriyo-course--content {
	padding: $spacing_24px;
	background-color: var(--masteriyo-color-white);

	// Category list.
	&__category {
		display: flex;
		flex-wrap: wrap;
		margin-right: -#{$spacing_4px};
		margin-left: -#{$spacing_4px};
		margin-top: -#{$spacing_4px};

		&-items {
			font-size: 10px;
			font-weight: 500;
			text-decoration: none;
			text-transform: uppercase;
			letter-spacing: 0.5px;
			padding: $spacing_2px $spacing_8px;
			color: var(--masteriyo-color-primary);
			border-radius: $border_radius_50;
			background-color: var(--masteriyo-color-primary-a10);
			margin: $spacing_4px;
		}
	}

	// Title.
	&__title {
		font-size: 18px;
		font-weight: 700;
		margin-top: 0;
		margin-bottom: $spacing_16px;
		line-height: 1.5;

		&::before {
			content: "";
			display: none;
		}

		a {
			color: var(--masteriyo-color-grey-dark);
			text-decoration: none;

			&:hover,
			&:focus {
				color: var(--masteriyo-color-btn-blue-hover);
			}
		}
	}

	// Author and rating.
	&__rt {
		display: flex;
		flex-wrap: wrap;
		align-items: center;
		justify-content: space-between;

		.masteriyo-course-author {
			display: flex;
			align-items: center;
			flex: 1 1 50%;
			margin-bottom: $spacing_16px;

			img {
				width: 32px;
				height: 32px;
				object-fit: cover;
				border-radius: $border_radius_50pct;
				border: 2px solid rgba(0, 0, 0, 0.1);
				margin: 0;
			}

			&--name {
				color: var(--masteriyo-color-text);
				font-size: 14px;
				line-height: 1.5;
				font-weight: 500;
				margin-left: $spacing_8px;
				overflow-wrap: break-word;
				text-transform: capitalize;
			}
		}

		.masteriyo-rating {
			display: flex;
			flex-wrap: wrap;
			font-size: 12px;
			font-weight: 500;
			align-items: center;
			margin-bottom: $spacing_16px;

			svg {
				fill: var(--masteriyo-color-golden);
				width: 16px;
				height: 16px;
				font-size: 0.75rem;

				&:last-child {
					margin-right: $spacing_8px;
				}
			}
		}
	}

	// Course desciption.
	&__description {
		margin-bottom: $spacing_20px;

		.title {
			margin-bottom: $spacing_14px;
		}

		ul {
			list-style: none;
			margin: 0px;
			padding: 0px;

			li {
				display: flex;

				p {
					margin: 0px;
					padding-left: $spacing_8px;
					font-size: 14px;
				}

				&::before {
					content: ("\2713");
					font-size: 16px;
				}
			}
		}
	}

	// Course stats.
	&__stats {
		display: flex;
		align-items: center;
		justify-content: space-between;
		padding: $spacing_16px 0;
		border-top: 1px solid var(--masteriyo-color-border);

		& > div {
			display: flex;
			align-items: center;
			justify-content: center;
			color: var(--masteriyo-color-text-light);

			span {
				margin-left: $spacing_8px;
				font-size: 14px;
				font-weight: 500;
			}

			svg {
				width: 20px;
				height: 20px;
				fill: var(--masteriyo-color-text-light);
			}
		}
	}

	// Price and enroll now.
	.masteriyo-time-btn {
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		align-items: center;
		justify-content: space-between;
		padding-top: $spacing_24px;
		border-top: 1px solid var(--masteriyo-color-border);

		.masteriyo-btn {
			border-radius: $border_radius_50;
			padding: $spacing_10px $spacing_24px;

			&:hover,
			&:focus,
			&:active {
				color: var(--masteriyo-color-white);
			}
		}
	}

	.masteriyo-course-price {
		.old-amount {
			text-decoration: line-through;
			font-size: 16px;
			font-weight: 500;
			color: var(--masteriyo-color-text-light);
			margin-right: $spacing_4px;
		}

		.current-amount {
			font-size: 24px;
			color: var(--masteriyo-color-primary);
			font-weight: bold;
		}
	}
}

.masteriyo-courses-header {
	&__title,
	.page-title {
		font-size: 32px;
		font-weight: 600;
		margin-bottom: $spacing_32px;
	}
}

